feat: initialized server and its utils

--- a/course-work/package.json
+++ b/course-work/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@prisma/engines": "^7.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
