--- a/course-work/package.json
+++ b/course-work/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
@@ -34,6 +35,7 @@
     "@prisma/language-server": "^31.1.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.2",
     "@types/supertest": "^6.0.3",
