--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17
-    container_name: peremohasports_db
+    container_name: postgres
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -14,6 +14,22 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
     networks:
       - db-network
+
+  app:
+    build:
+      context: ./course-work
+    container_name: app
+    restart: always
+    env_file:
+      - ./course-work/.env
+    ports:
+      - "3000:3000"
+      - "5555:5555"
+    depends_on:
+      - postgres
+    networks:
+      - db-network
+    
 
 volumes:
   postgres_data:
