--- a/course-work/package.json
+++ b/course-work/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-ses": "^3.948.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^6.19.0",
+    "@types/nodemailer": "^7.0.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
