--- a/course-work/package.json
+++ b/course-work/package.json
@@ -14,22 +14,6 @@
     "start": "node --env-file=.env dist/src/index.js",
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc",
-    "lint": "eslint --fix src test",
-    "test": "vitest run",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^6.19.0",
-    "@types/nodemailer": "^7.0.4",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3",
-    "prisma": "^6.19.0",
-    "zod": "^4.1.12"
     "lint": "eslint --fix src tests",
     "test": "vitest run",
     "test:unit": "vitest run tests/unit",
@@ -39,16 +23,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^6.19.0",
-    "@prisma/engines": "^7.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "nodemailer": "^6.9.16",
     "pg": "^8.16.3",
-    "prisma": "^6.19.0",
-    "zod": "^4.1.13"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
@@ -58,16 +41,18 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
+    "prisma": "^6.19.0",
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.6"
   },
   "directories": {
-    "test": "test"
+    "test": "tests"
   },
   "bugs": {
     "url": "https://github.com/w3cj/express-api-starter-ts/issues"
