--- a/course-work/package.json
+++ b/course-work/package.json
@@ -42,8 +42,7 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.9.2",
-    "@types/nodemailer": "^6.4.17",
+    "@types/node": "^25.0.2",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
@@ -51,7 +50,9 @@
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.6"
+    "vite": "^7.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.15"
   },
   "directories": {
     "test": "tests"
