--- a/course-work/package.json
+++ b/course-work/package.json
@@ -52,7 +52,8 @@
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.16",
+    "vitest-mock-extended": "^3.1.0"
   },
   "directories": {
     "test": "tests"
