--- a/course-work/tsconfig.json
+++ b/course-work/tsconfig.json
@@ -1,18 +1,28 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
     "strict": true,
     "noImplicitAny": true,
+
     "outDir": "dist",
     "sourceMap": true,
+
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "types": ["vitest/globals", "node"]
   },
   "include": [
-    "./*.js",
     "src/**/*.ts",
-    "tests/**/*.ts"
+    "tests/**/*.ts",
+    "prisma/**/*.ts"
   ]
 }
+
