--- a/course-work/package.json
+++ b/course-work/package.json
@@ -17,11 +17,12 @@
     "lint": "eslint --fix src tests",
     "test": "vitest run",
     "test:u": "vitest run tests/unit",
-    "test:i": "vitest run --config vitest.integration.ts",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:all": "npm run test:u && npm run test:i",
-    "pretest:i": "docker compose -f ../docker-compose.test.yaml up -d && echo 'good luck with testing b*tch' && sleep 10 && npx prisma generate && npx prisma migrate deploy && npx prisma db seed",
+    "pretest:i": "dotenv -e .env.test -- docker compose -f ../docker-compose.test.yaml up -d && echo 'good luck with testing' && sleep 10 && dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma migrate reset --skip-generate --force",
+    "test:i": "dotenv -e .env.test -- vitest run tests/integration --no-file-parallelism",
+    "dev:full": "docker compose up -d &&  npx prisma migrate generate && npx prisma migrate deploy && npx prisma db seed && npx tsx prisma/insert-admin.ts && npm run dev",
     "posttest:i": "docker compose down",
     "typecheck": "tsc --noEmit"
   },
@@ -47,6 +48,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.2",
     "@types/supertest": "^6.0.3",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
     "prisma": "^6.19.0",
