--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17
-    container_name: peremohasports_db
+    container_name: peremohasports_test_db
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
